src/passes/snapshots/lumina2__passes__cst_gen__test__tuple__tuple_single_item_trailing_comma.snap
---
source: src/passes/cst_gen.rs
expression: "(1,)"
---
Tuple {
    tok_l_parenthesis: LParenthesis,
    items: PunctuatedList {
        items: [
            Integer(
                IntegerLiteral(
                    IntegerLiteral(
                        1,
                    ),
                ),
            ),
        ],
        punctuation: [
            Comma,
        ],
    },
    tok_r_parenthesis: RParenthesis,
}
